--- a/ci/github-actions.yml
+++ b/ci/github-actions.yml
@@ -1,22 +1,49 @@
-name: CI Pipeline
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches: [ main ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+
+#       - name: Setup Java
+#         uses: actions/setup-java@v3
+#         with:
+#           java-version: '17'
+#           distribution: 'temurin'
+
+#       - name: Build Project
+#         run: |
+#           cd app/sample-spring-boot-app
+#           mvn clean package
+
+name: Full CI/CD
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    - uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Build Project
-        run: |
-          cd app/sample-spring-boot-app
-          mvn clean package
+    - name: Build App
+      run: cd app/sample-spring-boot-app && mvn clean package -DskipTests
+
+    - name: Build Docker Image
+      run: docker build -t teju/springapp:latest -f docker/Dockerfile .
+
+    - name: Deploy to K8s
+      run: kubectl apply -f k8s/dev/
