--- a/k8s/qa/deployment.yaml
+++ b/k8s/qa/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springapp
-  namespace: dev
+  namespace: qa
 spec:
   replicas: 1
   selector:
@@ -19,15 +19,3 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
-
-        envFrom:
-        - configMapRef:
-            name: app-config
-
-        resources:
-          requests:
-            cpu: "200m"
-            memory: "256Mi"
-          limits:
-            cpu: "500m"
-            memory: "512Mi"
