--- a/app/sample-spring-boot-app/src/main/resources/application.properties
+++ b/app/sample-spring-boot-app/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=springapp
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
