--- a/k8s/qa/service.yaml
+++ b/k8s/qa/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: springapp-service
-  namespace: dev
+  namespace: qa
 spec:
   type: NodePort
   selector:
@@ -10,4 +10,4 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30007
+      nodePort: 30008
